# thewerewolfsaga

./: Anchor.toml  package.json
app/: bot-helpers.ts  bot.ts  database.types.ts  game-types.ts  states.ts
client/: werewolf.client.ts
client/client/: account-utils.ts  types.ts
programs/werewolf_saga/: Cargo.toml
programs/werewolf_saga/src/: errors.rs  lib.rs
programs/werewolf_saga/src/contexts/: create_game.rs  eliminate_player.rs  fill_play_proof.rs  join_game.rs  kill_player.rs  see_player.rs  start_game.rs  vote_player.rs
programs/werewolf_saga/src/instructions/: create_game.rs  eliminate_player.rs  fill_play_proof.rs  join_game.rs  kill_player.rs  mod.rs  see_player.rs  start_game.rs  vote_player.rs
programs/werewolf_saga/src/states/: game.rs  kill_proof.rs  mod.rs  play_proof.rs  sight_proof.rs  vote_proof.rs
tests/: werewolf_saga.ts
