[package]
name = "werewolf_saga"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "werewolf_saga"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
bitflags = "2.4.1"
spl-token = {version = "4.0.0", features = ["no-entrypoint"]}
